# HeuristicContestTemplate

./: .gitignore  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.devcontainer/: devcontainer.json
bash_scripts/: setup_official_tools.sh
cloud_run/: Dockerfile  task.sh
python_scripts/: run_local.py  run_optuna.py  util.py
src/: constant.hpp  main.cpp
src/common/: ucb.hpp  xorshift.hpp
