[tool.poetry]
name = "atcoder-ahc0xx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
optuna = "^3.5.0"
joblib = "^1.3.2"
streamlit = "^1.29.0"
optuna-dashboard = "^0.14.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
